# ml-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  docker-compose.yaml  pyproject.toml
configs/: config.yaml  config_demo.yaml
configs/dataset/: image.yaml  synthetic.yaml  tabular.yaml  text.yaml
configs/experiment/: classification.yaml  segmentation.yaml
configs/loss/: cross_entropy.yaml
configs/model/: conv_demo.yaml  transformer.yaml  vit.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/scheduler/: cosine.yaml  step.yaml
configs/tools/: data_ablation.yaml  feasibility.yaml  few_shot.yaml  fine_tuning.yaml  learning_curves.yaml  linear_probe.yaml
configs/trainer/: ddp.yaml  default.yaml
notebooks/: 01_explore_data.ipynb  02_evaluate_results.ipynb
scripts/: benchmark.py  data_ablation.py  demo_train.py  export.py  feasibility.py  few_shot.py  fine_tune.py  learning_curves.py  linear_probe.py  predict.py  serve.py  train.py  validate.py
src/artifacts/: __init__.py  base.py  local.py  mlflow_backend.py
src/data/: __init__.py  cache.py  datamodule.py  download.py  registry.py  transforms.py  version.py
src/experiments/: __init__.py  base.py  classification.py  registry.py  regression.py  segmentation.py
src/export/: __init__.py  base.py  onnx.py  torchscript.py
src/losses/: __init__.py  registry.py
src/models/: __init__.py  base.py  conv_demo.py  registry.py  zoo.py
src/predictors/: __init__.py  base.py  classification.py  registry.py
src/profiling/: __init__.py  benchmark.py  (+2 more)
tests/: conftest.py  test_callbacks.py  test_checkpoint.py  test_demo_pipeline.py  test_experiments.py  test_losses.py  test_metrics.py  test_models.py  test_predictors.py
(+62 files in other folders)
