[project]
name = "ai-ml-template"
version = "0.1.0"
description = "General-purpose PyTorch template for AI/ML/DL projects"
requires-python = ">=3.10"
readme = "PLAN.md"

dependencies = [
    "torch>=2.0",
    "torchvision",
    "torchmetrics>=1.0",
    "hydra-core>=1.3",
    "mlflow>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "albumentations",
    "numpy",
    "tqdm",
    "rich",
    "pyyaml",
    "omegaconf",
    "pandas",
    "pillow",
    "scikit-learn",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "seaborn",
    "timm",
    "transformers",
    "wandb",
    "onnx",
    "onnxruntime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "seaborn",
    "timm",
    "transformers",
    "wandb",
    "onnx",
    "onnxruntime",
]
